@@ -115,6 +115,7 @@ ORG_FILES = \
   org/tut50.org \
   org/tut51.org \
   org/tut52.org \
+  org/tut90.org \
   org/upgrade2.org \
   org/satmin.org \
   org/satmin.tex \
