@@ -38,6 +38,8 @@ three interfaces supported by Spot: shell commands, Python, or C++.
 - [[file:tut23.org][Creating an alternating automaton by adding states and transitions]]
 - [[file:tut24.org][Iterating over alternating automata]]
 - [[file:tut52.org][Creating an explicit Kripke structure]]
+- [[file:tut90.org][Using the =bdd_dict= to associate atomic proposition to BDD
+  variables, or allocate anonymous BDD variables (advanced)]]
 
 * Examples in C++ only
 
